# ITCapstone2_TranslateAI_NachiketPatel

./: README.md
translator-backend/: .env.example  .gitignore  main.py  pyproject.toml
translator-backend/app/: main.py
translator-backend/app/core/: auth.py  config.py  languages.py
translator-backend/app/router/v1/: api.py
translator-backend/app/router/v1/endpoints/: translate.py
translator-backend/app/schemas/: translate.py
translator-backend/app/services/: audio.py  database.py  translator.py
translator-frontend/: package-lock.json  package.json
translator-frontend/app/: layout.tsx  page.tsx
translator-frontend/app/auth/callback/: page.tsx
translator-frontend/app/dashboard/: page.tsx
translator-frontend/app/history/: page.tsx
translator-frontend/app/login/: page.tsx
translator-frontend/app/register/: page.tsx
translator-frontend/app/reset/: page.tsx
translator-frontend/app/settings/: page.tsx
translator-frontend/components/: DocumentTranslation.tsx  Footer.tsx  ImageTranslation.tsx  PasswordStrengthMeter.tsx  TextTranslation.tsx  VoiceTranslation.tsx  temp.tsx
translator-frontend/lib/: AuthContext.tsx  api.ts  languages.ts  react-query.tsx  supabase_client.ts
translator-frontend/lib/hooks/: useAuthErrorHandler.ts  useTranslation.ts
translator-frontend/public/: audio-processor.js
translator-frontend/types/: supabase.ts
